# codeAgent_basic

./: pyproject.toml
src/codeagent_basic/: agent_basic.py  main.py  notebook_to_work.ipynb
